--- a/html/index.html
+++ b/html/index.html
@@ -24,21 +24,16 @@
         favorite
       </span>
       <h2 class="price one">100</h2>
-    </div>
     <div class="section1btns">
       <div class="calc1">
-        <img src="/img/minus.png" height="25px" width="25px" alt="">
+        <img src="/img/minus.png" height="35px" width="25px" alt="" class="sub1">
         <h4 class="count1">0</h4>
-        <img src="/img/addition.png" height="25px" width="25px" alt="">
+        <img src="/img/addition.png" height="20px" width="20px" alt="" class="sum1">
       </div>
         <button class="btn bone">Remove</button>
         <h4 class="totalprice tone">100.00</h4>
     </div>
-    <div class="titlesone">
-      <h4 class="product-name">Product Name</h4>
-      <h4 class="Pricename">Price</h4>
-      <h4 class="subtotal">Subtotal</h4>
-    </div>
+  </div>
     <div class="section2">
       <h2>Item 2</h2>
       <span class="material-symbols-outlined heart2">
@@ -55,14 +50,9 @@
         <button class="btn btwo">Remove</button>
         <h4 class="totalprice ttwo">100.00</h4>
     </div>
-    <div class="titles2">
-      <h4 class="product-name">Product Name</h4>
-      <h4 class="Pricename">Price</h4>
-      <h4 class="subtotal">Subtotal</h4>
-    </div>
     <div class="section3">
-      <h2>Item 1</h2>
-      <span class="material-symbols-outlined heart1">
+      <h2>Item 3</h2>
+      <span class="material-symbols-outlined heart3">
         favorite
       </span>
       <h2 class="price three">100</h2>
