css-sketching-pt2

--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
         <img src="/img/addition.png" height="20px" width="20px" alt="" class="sum1">
       </div>
         <button class="btn bone">Remove</button>
-        <h4 class="totalprice tone">100.00</h4>
+        <h4 class="totalprice tone">0</h4>
     </div>
   </div>
     <div class="section2">
@@ -39,37 +39,36 @@
       <span class="material-symbols-outlined heart2">
         favorite
       </span>
-      <h2 class="price two">100</h2>
-    </div>
+      <h2 class="price two">200</h2>
     <div class="section2btns">
       <div class="calc2">
-        <img src="/img/minus.png" height="25px" width="25px" alt="">
-        <h4 class="count1">0</h4>
-        <img src="/img/addition.png" height="25px" width="25px" alt="">
+        <img src="/img/minus.png" height="35px" width="25px" alt="" class="sub2">
+        <h4 class="count2">0</h4>
+        <img src="/img/addition.png" height="20px" width="20px" alt="">
       </div>
         <button class="btn btwo">Remove</button>
-        <h4 class="totalprice ttwo">100.00</h4>
+        <h4 class="totalprice ttwo">0</h4>
     </div>
+  </div>
     <div class="section3">
       <h2>Item 3</h2>
       <span class="material-symbols-outlined heart3">
         favorite
       </span>
-      <h2 class="price three">100</h2>
-    </div>
+      <h2 class="price three">300</h2>
     <div class="section3btns">
       <div class="calc3">
-        <img src="/img/minus.png" height="25px" width="25px" alt="">
+        <img src="/img/minus.png" height="35px" width="25px" alt="" class="sub3">
         <h4 class="count3">0</h4>
-        <img src="/img/addition.png" height="25px" width="25px" alt="">
+        <img src="/img/addition.png" height="20px" width="20px" alt="">
       </div>
         <button class="btn bthree">Remove</button>
-        <h4 class="totalprice tthree">100.00</h4>
+        <h4 class="totalprice tthree">0</h4>
     </div>
     </div>
   </section>
   <footer>
-    <h2>0</h2>
+    <h2>Your Total = 0</h2>
   </footer>
 </body>
 </html>
